# liqk

./: .gitignore  CLAUDE.md  README.md  backup.sh  filesystem.md  gen-token.py  liqk-schema.md  list_liqk_fs.py  nginx.conf  server.md
app/: App.js  README.md  app.json  package-lock.json  package.json
app/components/: AccessTokenDialog.js  AddTaskDialog.js  ReadmeModal.js  Sidebar.js
app/services/: lkd.js
app/views/: InboxView.js  MarkdownViewer.js  SettingsView.js  TasksView.js
gate/: .gitignore  Cargo.toml  README.md
gate/src/: auth.rs  files.rs  main.rs  proxy.rs  templates.rs
liqk-crypto/: Cargo.toml  README.md
liqk-crypto/src/: main.rs
scripts/: b2-upload.js  package-lock.json  package.json  rdf-canonize-cli.js
