[package]
name = "liqk-crypto"
version = "0.1.0"
edition = "2021"
description = "File encryption using ChaCha20Poly1305 and X-Wing KEM"

[dependencies]
libcrux-kem = { git = "https://github.com/cryspen/libcrux", tag = "libcrux-kem-v0.0.4" }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
pem = "3"
rand = "0.9"
anyhow = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
